# dtmm-task-3

./: README.md  hierarchical.ipynb  kmeans.ipynb  main.ipynb  main.py  pyproject.toml
